# ClinVar_Search

./: .coverage  .coveragerc  .gitignore  Dockerfile  Jenkinsfile  README.md  coverage.xml  environment.yml  jenkinsfile  pyproject.toml  requirements.txt  startapp.sh
.github/workflows/: python-tests.yml
ClinVar_Search/: logger.py
ClinVar_Search/ClinVar_Site/: app.py  pages.py
ClinVar_Search/modules/: annote_with_vep_clinvar.py  clinvar_project.db  clivar_api_query.py  dummy_database.py  insert_annotated_results.py  lovd_hgvs-query2.py  lovd_hgvs_query.py  lovd_hgvs_query3.py  parser.py  save_function.py  setup_results.py
JenkinsFile_confirmation/: JenkinsFile_success_confirmation.txt
clinvar_query/: logger.py  main.py
clinvar_query/ClinVar_Site/: __init__.py  app.py
clinvar_query/modules/: check_file_status.py  clinvar_api_query.py  clivar_api_query.py  dummy_database.py  insert_annotated_results.py  json_to_db.py  lovd_hgvs_query.py  mapping_variables.py  mutalyzer_hgvs_query.py  parser.py  paths.py  patient_lookup.py  process_misalign.py  process_uploads.py  read_uploads.py  save_function.py  search_results.py  setup_results.py  variantvalidator_hgvs_query.py  vv_variant_query.py
docs/: INSTALLATION.md
docs/UserGuide/: UserGuide.md
tests/: conftest.py  test_clinvar_api_query.py  test_database_init.py  test_file_check.py  test_insert_annotated_results.py  test_json_to_db.py  test_parser.py  test_patient_lookup.py  test_process_upload.py  test_read_upload.py  test_save_function.py  test_search_results.py  test_setup_results.py  test_vv_variant_query.py
(+34 files in other folders)
